Editing and looking at stuff.

--- a/src/test.html
+++ b/src/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel = "stylesheet" href = "test.css">
         <meta charset = "utf-8">
         <title>
             Todd Addison Designs
@@ -9,9 +10,8 @@
     <body>
         <h1 title-block>
             Todd Addison Designs, Inc.
-            <img src = /data/logo.png alt = "Logo here">
         </h1>
-        <p >
+        <p introduction>
             We design experiences, entertainment,
             and most of all, houses.
         </p>
