Added css and palette image

--- a/src/landing-page.html
+++ b/src/landing-page.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="landing-page.css">
     <meta charset="utf-8">
     <title>
@@ -10,19 +11,16 @@
 </head>
 
 <body>
-    <h1 id = "title"> Todd Addison Designs </h1>
-    <nav id = "navbar">
-        <ul>
-            <li><a href = "#item1">Item 1</a></li>
-            <li><a href = "#item2">Item 2</a></li>
-            <li><a href = "#item3">Item 3</a></li>
-            <li><a href = "#item4">Item 4</a></li>
+    <nav>
+        <ul id = "nav-text">
+            <li><a href = "#item1">About</a></li id = "navbar-text">
+            <li><a href = "#item2">Contact</a></li>
+            <li><a href = "#item3">Gallery</a></li>
+            <li><a href = "#item4">Prints</a></li>
         </ul>
     </nav>
-
-    <p id = "item1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in orci ac libero auctor dictum. Aliquam eget ante varius lorem feugiat rutrum non et felis. Nullam scelerisque ante ultrices, tristique ipsum facilisis, sollicitudin nisl. Mauris luctus in ex vitae vulputate. Donec luctus eu massa in dictum. Nulla posuere varius erat eget malesuada. Ut ultrices, nibh nec sagittis mattis, est tellus aliquam arcu, ac scelerisque sem neque mattis ipsum.</p>
-    <p id = "item2">Praesent id semper mauris. Praesent dictum dui sem, et egestas sem posuere eget. Etiam facilisis metus lorem, vitae posuere erat sodales nec. Donec leo metus, dictum vel nisl eget, malesuada convallis neque. Integer dignissim nisl nunc. In arcu enim, efficitur nec ligula quis, tempor mollis ex. Sed scelerisque magna in lobortis molestie. Nullam dapibus porta scelerisque. Sed quis elementum ligula. Pellentesque ut odio non urna convallis auctor.</p>
-    <p id = "item3">Ut augue urna, elementum quis nunc eu, porta tempor sapien. Nunc tempus est vitae lacus maximus, eu dictum quam ultricies. Aliquam accumsan lectus congue tincidunt pulvinar. Aliquam fermentum, augue a viverra cursus, dui leo aliquam lacus, vitae convallis odio enim a ex. Praesent accumsan leo nec libero lobortis, pellentesque laoreet arcu tristique. Morbi semper venenatis dolor sed feugiat. Vestibulum ipsum nunc, dignissim a quam vel, mollis euismod lacus. Integer dictum mollis augue at rutrum. Vivamus cursus pharetra lacus nec pharetra. Phasellus eleifend viverra lorem ac sodales.</p>
-    <p id = "item4">Mauris posuere convallis tortor id blandit. In nec hendrerit ex. Vestibulum volutpat convallis tincidunt. Integer vel vestibulum justo, vel vestibulum magna. Nam eleifend nulla metus, nec tempus purus lobortis in. Quisque iaculis nulla non est volutpat, eu consequat elit rutrum. Quisque sit amet odio a metus volutpat pellentesque. Duis at ante feugiat, iaculis justo ac, congue tellus. Curabitur consequat ligula quis orci molestie malesuada. Donec ut lobortis ligula, sed ullamcorper quam. Nulla hendrerit fringilla nisl. Aliquam vitae ullamcorper mi.</p>
-
+    <div>
+    <img src = photos\logo.png alt = "CTA Designs Logo"> 
+    <h1 id = "title"> Todd Addison Designs </h1>
+    </div>
 </body>
