working on some stuff

--- a/src/landing-page.html
+++ b/src/landing-page.html
@@ -4,6 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="landing-page.css">
+    <link rel="shortcut icon" href = "\photos\favicon.ico">
     <meta charset="utf-8">
     <title>
         Todd Addison Designs
@@ -11,16 +12,16 @@
 </head>
 
 <body>
-    <nav>
-        <ul id = "nav-text">
-            <li><a href = "#item1">About</a></li id = "navbar-text">
-            <li><a href = "#item2">Contact</a></li>
-            <li><a href = "#item3">Gallery</a></li>
-            <li><a href = "#item4">Prints</a></li>
-        </ul>
+    <nav class = "navbar">
+        <a href = #> Contact </a>
+        <a> Gallery </a>
+        <a> CV </a>
+        <a> Prints </a> 
     </nav>
-    <div>
-    <img src = photos\logo.png alt = "CTA Designs Logo"> 
-    <h1 id = "title"> Todd Addison Designs </h1>
+    <div class = "title-block">
+    <img id = "logo" src = \photos\logo-white.png alt = "CTA Designs Logo"> 
+    <h1 id = "title-text"> Todd Addison Designs </h1>
     </div>
 </body>
+
+</html>
